--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "element-ui": "^1.4.4",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
